# tmp-advanced-programming

advanced-programming-group-euler-1c.-2D-Conv-Filter-for-Image-Sharpening/: CMakeLists.txt
advanced-programming-group-euler-1c.-2D-Conv-Filter-for-Image-Sharpening/src/: ConvolutionFilter.cpp  ConvolutionFilter.h  DataContainer.cpp  DataContainer.h  Filter.cpp  Filter.h  Image.cpp  Image.h  Pixel.cpp  Pixel.h  PrewittFilter.cpp  PrewittFilter.h  RobertsCrossFilter.cpp  RobertsCrossFilter.h  ScharrFilter.cpp  SharpeningFilter.cpp  SharpeningFilter.h  SimpleFilters.cpp  SimpleFilters.h  SobelFilter.cpp  SobelFilter.h  SobelTest  Volume.h  main.cpp  test.cpp
advanced-programming-group-euler-main/: CMakeLists.txt  LICENSE.txt  References.md
advanced-programming-group-euler-main-volume-unitest/: .gitignore  CMakeLists.txt
advanced-programming-group-euler-main-volume-unitest/src/: Pixel.cpp  (+6 more)
advanced-programming-group-euler-main/src/: DataContainer.cpp  DataContainer.h  Image.cpp  Image.h  InputProcessor.h  Pixel.cpp  Pixel.h  Volume.cpp
advanced-programming-group-euler-main/src/filter2D/: BoxBlurFilter.cpp  Filter.cpp  GaussianBlurFilter.h  RobertsCrossFilter.h  ScharrFilter.cpp  ScharrFilter.h  SimpleFilters.cpp  SobelFilter.cpp  SobelFilter.h
advanced-programming-group-euler-main/src/filter3D/: Median3DFilter.cpp  VolumeFilter.cpp
advanced-programming-group-euler-main/src/projectionFunc/: AvgIntensityProj.cpp  AvgIntensityProj.h  MaxIntensityProj.cpp  MaxIntensityProj.h  MinIntensityProj.h  Projection.cpp  Projection.h
advanced-programming-group-euler-main/tests/: TestCounters.h  main.cpp  testGaussian3DFilter.cpp  testPrewittFilter.cpp  testProjection.cpp  testProjectionAvg.cpp  testProjectionMax.cpp  testRobertsCrossFilter.cpp  testScharrFilter.cpp  testSharpeningFilter.cpp  testSobelFilter.cpp  testVolume.cpp
advanced-programming-individual-esemsc-ll1524-main/: Matrix_06008146.cpp  Matrix_06008146.h
(+69 files in other folders)
